feat: backport quarkus based signer
Refs: XRDDEV-2829